Added foood, yummers

--- a/src/main/resources/assets/randumb/lang/en_pt.json
+++ b/src/main/resources/assets/randumb/lang/en_pt.json
@@ -1,3 +1,4 @@
 {
-  "item.randumb.weetbix": "Block that Drys ye Mouth"
+  "item.randumb.weetbix": "Block that Drys ye Mouth",
+  "item.randumb.bowl_of_weetbix": "A mess the stores ye Block of Wheat"
 }
