--- a/src/main/resources/assets/randumb/lang/en_us.json
+++ b/src/main/resources/assets/randumb/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.randumb.weetbix": "Weetbix"
+  "item.randumb.weetbix": "Weetbix",
+  "item.randumb.bowl_of_weetbix": "Bowl of Weetbix"
 }
